recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:6: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^PentaKoch:8: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^PentaKoch:10: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^PentaKoch:12: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^PentaKoch:14: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^PentaKoch:16: error: not found: value lenght
	pentaKoch(levels-1, lenght/3)
                            ^