recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
if(levels==0){
	avance(length)
}else{
	pentaKoch(levels-1, lenght/3)
	gauche(108)
	pentaKoch(levels-1, lenght/3)
	droite(72)
	pentaKoch(levels-1, lenght/3)
	droite(72)
	pentaKoch(levels-1, lenght/3)
	droite(72)
	pentaKoch(levels-1, lenght/3)
	gauche(108)
	pentaKoch(levels-1, lenght/3)

}
}
